crates/plotnik-tests/tests/03-analyze/predicates/regex_empty_pattern.txt
Q = (identifier =~ //)
------------------ DIAGNOSTICS -------------------
error: empty regex pattern
 --> query.ptk:1:20
  |
1 | Q = (identifier =~ //)
  |                    ^^
  |
help: put a pattern between the slashes, or use a quoted value with a string predicate operator
-------------------- SYMBOLS ---------------------
